# intranet-tremt

./: Makefile  README.md  docker-compose.yml  repository.toml  towncrier.toml
.github/workflows/: main.yml
backend/: .mrbob.ini  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  instance.yaml  pyproject.toml
backend/scripts/: create_site.py
backend/src/tremt/intranet/: __init__.py  configure.zcml  permissions.zcml  profiles.zcml  testing.py
backend/src/tremt/intranet/behaviors/: configure.zcml  contato.py  endereco.py
backend/src/tremt/intranet/content/: area.py  pessoa.py
backend/src/tremt/intranet/controlpanels/: configure.zcml
backend/src/tremt/intranet/indexers/: pessoa.py
backend/src/tremt/intranet/locales/: tremt.intranet.pot
backend/src/tremt/intranet/locales/en/LC_MESSAGES/: tremt.intranet.po
backend/src/tremt/intranet/locales/pt_BR/LC_MESSAGES/: tremt.intranet.po
backend/src/tremt/intranet/profiles/default/: browserlayer.xml  catalog.xml  metadata.xml  rolemap.xml  types.xml  workflows.xml
backend/src/tremt/intranet/profiles/default/registry/: main.xml  plone.app.querystring.interfaces.IQueryField.xml  plone.base.interfaces.controlpanel.IDateAndTimeSchema.xml  plone.base.interfaces.controlpanel.IMailSchema.xml  plone.base.interfaces.controlpanel.INavigationSchema.xml  plone.base.interfaces.controlpanel.ISiteSchema.xml  plone.base.interfaces.controlpanel.ISocialMediaSchema.xml
backend/src/tremt/intranet/profiles/default/types/: Area.xml  Pessoa.xml
backend/src/tremt/intranet/profiles/uninstall/: browserlayer.xml
backend/src/tremt/intranet/serializers/: configure.zcml
backend/src/tremt/intranet/setuphandlers/: __init__.py  initial.py
backend/src/tremt/intranet/upgrades/: catalog.py  configure.zcml  workflow.py
backend/src/tremt/intranet/utils/: validadores.py
backend/src/tremt/intranet/vocabularies/: areas.py  cargos.py  configure.zcml  estados.py
backend/tests/: conftest.py
backend/tests/behaviors/: conftest.py  test_behavior_contato.py  test_behavior_endereco.py
backend/tests/content/: test_content_area.py  test_content_pessoa.py  test_content_plone_site.py
backend/tests/setup/: test_portal_settings.py  test_setup_install.py  test_setup_uninstall.py
backend/tests/utils/: test_validadores.py
backend/tests/vocabularies/: test_voc_cargos.py  test_voc_estados.py
devops/: README-GITLAB.md
devops/stacks/: intranet.tre-mt.jus.br.yml
frontend/: .eslintrc.js  Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  volto.config.js
scripts/: .gitignore  listagem.py  popula.py
